--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1533,7 +1533,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-09-18
+Latest      : 2018-09-23
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1602,7 +1602,7 @@ Description : provides many basic utility functions required by other modules</p
 <div class="section" id="8">
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
-<dt id="getcxTrueColorSetFlag"><a name="getcxTrueColorSetFlag"></a><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> bool <span class="Other">=</span> <span class="DecNumber">true</span></pre></dt>
+<dt id="getcxTrueColorSetFlag"><a name="getcxTrueColorSetFlag"></a><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="DecNumber">true</span></pre></dt>
 <dd>
 
 
@@ -2454,7 +2454,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-09-18 07:25:55 UTC</small>
+        <small>Made with Nim. Generated: 2018-09-23 05:13:50 UTC</small>
       </div>
     </div>
   </div>
