--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -1278,6 +1278,14 @@ function main() {
 
   </ul>
 </li>
+<li>
+  <a class="reference reference-toplevel" href="#15" id="65">Iterators</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#parseIps.i,string"
+    title="parseIps(soup: string): string"><wbr />parse<wbr />Ips<span class="attachedType" style="visibility:hidden"></span></a></li>
+
+  </ul>
+</li>
 
 </ul>
 
@@ -1425,6 +1433,18 @@ function main() {
 </dd>
 
 </dl></div>
+<div class="section" id="15">
+<h1><a class="toc-backref" href="#15">Iterators</a></h1>
+<dl class="item">
+<dt id="parseIps"><a name="parseIps.i,string"></a><pre><span class="Keyword">iterator</span> <span class="Identifier">parseIps</span><span class="Other">(</span><span class="Identifier">soup</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+<p>parseIps for ipv4 addresses only</p>
+<p>ex nim documentation strscans module </p>
+
+
+</dd>
+
+</dl></div>
 
   </div>
 </div>
@@ -1433,7 +1453,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-09-26 05:47:22 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-01 07:29:52 UTC</small>
       </div>
     </div>
   </div>
