--- a/cxprint.html
+++ b/cxprint.html
@@ -1288,7 +1288,7 @@ function main() {
   <li><a class="reference" href="#decho%2Cint"
     title="decho(z: int = 1)"><wbr />decho<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printRainbow%2Cstring%2Cset%5BStyle%5D"
-    title="printRainbow(s: string; styled: set[Style] = {})"><wbr />print<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printRainbow(astr: string; styled: set[Style] = {})"><wbr />print<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printLnRainbow%2CT%2Cset%5BStyle%5D"
     title="printLnRainbow[T](s: T; styled: set[Style] = {})"><wbr />print<wbr />Ln<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printBiCol%2Cvarargs%5BT%2C%5D%2Cstring%2Cstring%2Cstring%2Cint%2Cbool%2Cset%5BStyle%5D"
@@ -1422,9 +1422,9 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-09-18
+Latest      : 2018-10-04
 
-Compiler    : Nim &gt;= 0.18.x dev branch
+Compiler    : Nim &gt;= 0.19.x dev branch
 
 OS          : Linux
 
@@ -1751,8 +1751,8 @@ forward declaration
 
 </dd>
 <a id="printRainbow%2Cstring%2Cset%5BStyle%5D"></a>
-<dt><pre><span class="Keyword">proc</span> <span class="Identifier">printRainbow</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <span class="Identifier">printRainbow</span><span class="Other">(</span><span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 forward declaration
 
@@ -1768,7 +1768,7 @@ forward declaration
 <span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span><span class="DecNumber">100</span><span class="Punctuation">,</span>
     <span class="Keyword">block</span><span class="Punctuation">:</span>
         <span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="Identifier">cxpad</span><span class="Punctuation">(</span><span class="StringLit">&quot; &quot;</span><span class="Punctuation">,</span><span class="Identifier">tw</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleReverse</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
-        <span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="Identifier">cxpad</span><span class="Punctuation">(</span><span class="StringLit">&quot; NimCx &quot;</span> <span class="Operator">*</span> <span class="DecNumber">21</span> <span class="Punctuation">,</span><span class="Identifier">tw</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleBright</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
+        <span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="Identifier">cxpad</span><span class="Punctuation">(</span><span class="StringLit">&quot; NimCx &quot;</span> <span class="Operator">*</span> <span class="DecNumber">18</span> <span class="Punctuation">,</span><span class="Identifier">tw</span> <span class="Operator">-</span> <span class="DecNumber">18</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleBright</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
         <span class="Identifier">sleepy</span><span class="Punctuation">(</span><span class="FloatNumber">0.01</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
@@ -1824,8 +1824,8 @@ forward declaration
                    <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;:&quot;</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span>
                    <span class="Identifier">centered</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>printBiCol</p>
-<p>Notes see printLnBiCol </p>
+<p>printBiCol2</p>
+<p>Notes see printLnBiCol2 </p>
 
 
 </dd>
@@ -2157,7 +2157,7 @@ forward declaration
 <dd>
 <p>dprint</p>
 <p>debug print shows contents of s in repr mode</p>
-<p>usefull for debugging  (for some reason the  line number maybe off sometimes) </p>
+<p>usefull for debugging  (for some reason the line number maybe off sometimes) </p>
 
 
 </dd>
@@ -2206,7 +2206,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-03 06:44:48 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-05 10:37:20 UTC</small>
       </div>
     </div>
   </div>
