--- a/libFinHk.html
+++ b/libFinHk.html
@@ -1199,7 +1199,7 @@ span.pragmawrap {
 
 </style>
 
-<script type="text/javascript" src="../dochack.js"></script>
+<script type="text/javascript" src="dochack.js"></script>
 
 <script type="text/javascript">
 function main() {
@@ -1262,7 +1262,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-07-20 13:10:41 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-05 10:47:21 UTC</small>
       </div>
     </div>
   </div>
