--- a/cx.html
+++ b/cx.html
@@ -2105,8 +2105,9 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
 <a id="doByeBye.t,"></a>
 <dt><pre><span class="Keyword">template</span> <span class="Identifier">doByeBye</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
-<p>doByeBye</p>
-<p>a simple end program routine do give some feedback when exiting </p>
+doByeBye<dl class="docutils"><dt>a simple end program routine do give some feedback when exiting</dt>
+<dd>parseCxDatetime((datetime.datetime(2019,7,15,5,10,3,2345)))</dd>
+</dl>
 
 
 </dd>
@@ -2120,7 +2121,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-15 13:06:32 UTC</small>
+        <small>Made with Nim. Generated: 2018-10-18 04:47:43 UTC</small>
       </div>
     </div>
   </div>
